# voice100-runtime

./: README.md  pyproject.toml  setup.py  test.py
cpp/: .gitignore  Makefile  test.cpp  vocoder.cpp
voice100_runtime/: __init__.py  asr.py  audio.py  stt.py  text.py  tts.py  vocoder.py
